--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.2",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -26,6 +28,8 @@
     "node-sass": "^4.13.1",
     "reset-css": "^5.0.1",
     "sass-loader": "^8.0.2",
+    "stylelint": "^13.0.0",
+    "stylelint-config-recommended": "^3.0.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
