--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@vue/test-utils": "^1.0.0-beta.31",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.2",
+    "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
+    "date-fns": "^2.9.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-html": "^6.0.0",
@@ -25,12 +30,15 @@
     "eslint-plugin-vue": "^6.1.2",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-root-plugin": "^0.10.0",
+    "jest": "^25.1.0",
     "node-sass": "^4.13.1",
+    "ramda": "^0.27.0",
     "reset-css": "^5.0.1",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.0.0",
     "stylelint-config-recommended": "^3.0.0",
     "vue": "^2.6.11",
+    "vue-jest": "^3.0.5",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.17.2",
