--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "babel-loader": "^8.0.2",
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
-    "date-fns": "^2.9.0",
+    "date-fns": "^2.0.0-beta.5",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-html": "^6.0.0",
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "@date-io/date-fns": "^2.3.0",
     "npm-run-all": "^4.1.3",
     "serve": "^10.0.0"
   }
