remove extra space after contact card name

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,7 @@
         "html"
     ],
     "rules": {
+        "vue/require-default-prop": "off",
+        "vue/multiline-html-element-content-newline": "off"
     }
 }
