--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-webpack-root-plugin": "^0.10.0",
     "jest": "^25.1.0",
     "node-sass": "^4.13.1",
+    "normalize.css": "^8.0.1",
     "ramda": "^0.27.0",
     "reset-css": "^5.0.1",
     "sass-loader": "^8.0.2",
